--- a/index.html
+++ b/index.html
@@ -73,47 +73,85 @@
     <p>Protecting Poland's magical heritage since 1893</p>
   </header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#dragons">Meet Our Dragons</a>
-    <a href="#adopt">Adoption Program</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <main class="container">
-    <section id="about">
-      <h2>About the Park</h2>
-      <p>
-        Hidden deep in the forests of southern Poland, Smokowisko National Dragon Park
-        is home to some of the last remaining dragons in Europe. These majestic
-        creatures live in harmony with the lush environment, protected and studied by our
-        dedicated team of caretakers and researchers.
+  <!-- Simple hero banner inspired by national park sites -->
+  <section aria-label="Hero" style="background: linear-gradient(120deg, #004225, #0a6b3b); color:#fff;">
+    <div class="container" style="padding: 2.5em 1em;">
+      <h2 style="margin:0 0 .35em 0; color:#fff;">About Smokowisko</h2>
+      <p style="margin:0; max-width: 60ch;">
+        An information page about the origins and mission of the Park.
       </p>
-    </section>
+    </div>
+  </section>
 
-    <section id="dragons">
-      <h2>Meet Our Dragons</h2>
-      <!-- IMPORTANT for GitHub Pages: use a relative path without a leading slash -->
-      <img class="dragon-photo" src="images/iskra.jpg" alt="Iskra the Dragon" />
-      <p><strong>Iskra</strong> is a young female Polish Forest Dragon known for her shimmering
-        silver-green scales and playful spirit. She loves cloudberries and flying through
-        misty valleys at dawn.</p>
-    </section>
+  <main class="container" style="display:grid; grid-template-columns: 280px 1fr; gap: 2rem; align-items:start;">
+    <!-- Left info column (like a minimalist sidebar) -->
+    <aside aria-label="At a glance" style="background:#e9f4ec; padding:1rem; border-radius:12px; position:sticky; top:72px;">
+      <h3 style="margin-top:0; color:#004225;">At a glance</h3>
+      <ul style="padding-left:1.1rem; margin:0;">
+        <li><strong>Founded:</strong> 1893 (formal charter revised 1937)</li>
+        <li><strong>Location:</strong> Southern Poland, Smokowisko Forest Reserve</li>
+        <li><strong>Focus:</strong> Conservation, research, and public education</li>
+        <li><strong>Emblem:</strong> Polish Forest Dragon</li>
+      </ul>
+    </aside>
 
-    <section id="adopt">
-      <h2>Adopt a Dragon</h2>
+    <!-- Main content: the only information on the page -->
+    <article aria-label="Park history and mission">
+      <h2>The Foundation and Mission of Smokowisko National Dragon Park</h2>
+
       <p>
-        Support conservation efforts and become part of our dragon family. Adopting a dragon like Iskra
-        helps us preserve their natural habitat and fund vital research.
+        Smokowisko National Dragon Park was founded in <strong>1893</strong> by a coalition of naturalists,
+        folklorists, and local guardians who sought to protect a dwindling population of
+        Polish Forest Dragons and the unique ecosystem that shelters them. The decision to
+        establish a protected area was prompted by two converging forces of the late 19th century:
+        accelerating industrial forestry in the foothills and a wave of interest in documenting
+        living European folklore. Early caretakers recorded nesting sites, mapped feeding glades,
+        and negotiated seasonal forest quiet hours with nearby communities—customs that became the
+        backbone of the Park’s management traditions.
       </p>
-      <p>Each adoption includes a personalized certificate, dragon profile, photos, and a magical keepsake.</p>
-    </section>
 
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <p>Email: <a href="mailto:welcome@smokowisko.pl">welcome@smokowisko.pl</a></p>
-      <p>Location: Smokowisko Forest Reserve, Poland</p>
-    </section>
+      <p>
+        In its <em>early years (1893–1914)</em>, Smokowisko operated informally, guided by local statutes
+        and civic patronage. Rangers traveled on foot between scattered shelters, sharing hand‑written
+        ledgers of observations. A small research hut—later known as the <em>Green Lantern Station</em>—hosted
+        the first longitudinal field notes on migration corridors and molting cycles. Although modest in
+        resources, the Park pioneered practices that today would be called community science, inviting
+        shepherds, herbalists, and woodcutters to contribute sightings and weather logs.
+      </p>
+
+      <p>
+        The Park’s <em>formalization in the interwar period</em> brought the first comprehensive charter and
+        a clear legal mandate for habitat protection, quiet zones, and scientific study. During this time
+        a ring of buffer groves was purchased or donated to limit disturbance near roosting crags. The
+        charter also codified the role of the <em>Smokowisko Custodians</em>—a council of local representatives
+        and scholars charged with balancing conservation with cultural heritage. These measures stabilized
+        breeding success and allowed the dragon population to recover from its 19th‑century low.
+      </p>
+
+      <p>
+        After mid‑century, the Park broadened its mission to include <strong>education</strong> and <strong>research</strong>
+        accessible to visitors. Forest classrooms and traveling exhibits introduced generations of students
+        to the region’s geology, hydrology, and biodiversity. Partnerships with universities strengthened
+        monitoring efforts, while careful zoning preserved dark‑sky corridors for nocturnal flight and
+        minimized light spill from nearby valleys.
+      </p>
+
+      <p>
+        Today, Smokowisko National Dragon Park remains dedicated to three pillars: <strong>protection of habitat</strong>,
+        <strong>long‑term research</strong>, and <strong>public stewardship</strong>. Conservation work focuses on maintaining
+        old‑growth stands, restoring wetlands that support prey species, and safeguarding thermal updraft
+        routes used during seasonal movements. Research priorities include population genetics, nesting
+        site fidelity, and the interplay between microclimate and scale iridescence. Through guided talks,
+        open archives, and volunteer days, the Park invites visitors and neighbors alike to participate in
+        a living tradition of care that began with the founders’ vow in 1893.
+      </p>
+
+      <h3>Founders’ Note (Excerpt)</h3>
+      <p>
+        “Let these forests be held in trust for the creatures who make them their home, and for those who
+        would learn from their quiet.” — Inscription from the 1893 Smokowisko charter
+      </p>
+    </article>
   </main>
 
   <footer>
