--- a/index.html
+++ b/index.html
@@ -11,18 +11,30 @@
     body {
       font-family: "Segoe UI", system-ui, -apple-system, Roboto, Arial, sans-serif;
       margin: 0;
-      background-color: #f2f7f3;
       color: #333;
       line-height: 1.6;
+      background: url('images/background.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+    /* Add a translucent overlay for readability */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.75);
+      z-index: -1;
     }
     header {
-      background-color: #004225;
+      background-color: rgba(0, 66, 37, 0.9);
       color: white;
       padding: 1.5em;
       text-align: center;
     }
     nav {
-      background-color: #027333;
+      background-color: rgba(2, 115, 51, 0.9);
       color: white;
       display: flex;
       justify-content: center;
@@ -46,14 +58,16 @@
     .container {
       max-width: 900px;
       margin: 2em auto;
-      padding: 0 1em;
+      padding: 1em;
+      background: rgba(255,255,255,0.85);
+      border-radius: 8px;
     }
     h2 { color: #004225; margin-top: 0; }
 
     footer {
       text-align: center;
       padding: 2em;
-      background-color: #004225;
+      background-color: rgba(0, 66, 37, 0.9);
       color: white;
     }
   </style>
