--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       margin: 0;
       color: #333;
       line-height: 1.6;
-      background: url('images/background.jpg') no-repeat center center fixed;
+      background: url('background.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     /* Add a translucent overlay for readability */
