--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       line-height: 1.6;
       background: url('background.jpg') no-repeat center center fixed;
       background-size: cover;
+      background-color: #f2f7f3; /* fallback */
+      position: relative; /* ensure overlay stacks correctly */
     }
     /* Add a translucent overlay for readability */
     body::before {
@@ -25,15 +27,27 @@
       width: 100%;
       height: 100%;
       background: rgba(255, 255, 255, 0.75);
-      z-index: -1;
+      z-index: 0; /* sit above image, below content */
+      pointer-events: none;
     }
     header {
+      position: relative; z-index: 1;
       background-color: rgba(0, 66, 37, 0.9);
       color: white;
       padding: 1.5em;
       text-align: center;
     }
     nav {
+      position: sticky; /* keep sticky behavior */
+      top: 0;
+      z-index: 2; /* above overlay */
+      background-color: rgba(2, 115, 51, 0.9);
+      color: white;
+      display: flex;
+      justify-content: center;
+      gap: 1em;
+      flex-wrap: wrap;
+      padding: 0.5em 1em;
       background-color: rgba(2, 115, 51, 0.9);
       color: white;
       display: flex;
@@ -56,6 +70,13 @@
     nav a:hover { background: #02692c; }
 
     .container {
+      position: relative; z-index: 1;
+      max-width: 900px;
+      margin: 2em auto;
+      padding: 1em;
+      background: rgba(255,255,255,0.85);
+      border-radius: 8px;
+    }
       max-width: 900px;
       margin: 2em auto;
       padding: 1em;
@@ -65,6 +86,12 @@
     h2 { color: #004225; margin-top: 0; }
 
     footer {
+      position: relative; z-index: 1;
+      text-align: center;
+      padding: 2em;
+      background-color: rgba(0, 66, 37, 0.9);
+      color: white;
+    }
       text-align: center;
       padding: 2em;
       background-color: rgba(0, 66, 37, 0.9);
