--- a/index.html
+++ b/index.html
@@ -6,115 +6,135 @@
   <title>Smokowisko National Dragon Park</title>
   <meta name="description" content="Smokowisko National Dragon Park — Protecting Poland's magical heritage since 1893." />
   <style>
-    :root { color-scheme: light dark; }
+    :root { color-scheme: light; }
     * { box-sizing: border-box; }
     body {
       font-family: "Segoe UI", system-ui, -apple-system, Roboto, Arial, sans-serif;
       margin: 0;
-      color: #333;
+      color: #1d1f1e;
+      background: #f5f7f6;
       line-height: 1.6;
-      background: url('background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      background-color: #f2f7f3; /* fallback */
-      position: relative; /* ensure overlay stacks correctly */
     }
-    /* Add a translucent overlay for readability */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.75);
-      z-index: 0; /* sit above image, below content */
-      pointer-events: none;
-    }
-    header {
-      position: relative; z-index: 1;
-      background-color: rgba(0, 66, 37, 0.9);
-      color: white;
-      padding: 1.5em;
-      text-align: center;
-    }
-    nav {
-      position: sticky; /* keep sticky behavior */
-      top: 0;
-      z-index: 2; /* above overlay */
-      background-color: rgba(2, 115, 51, 0.9);
-      color: white;
-      display: flex;
-      justify-content: center;
-      gap: 1em;
-      flex-wrap: wrap;
-      padding: 0.5em 1em;
-      background-color: rgba(2, 115, 51, 0.9);
-      color: white;
-      display: flex;
-      justify-content: center;
-      gap: 1em;
-      flex-wrap: wrap;
-      padding: 0.5em 1em;
+
+    /* ===== Top Bar (similar to PPN) ===== */
+    .topbar {
       position: sticky;
       top: 0;
-      z-index: 10;
+      width: 100%;
+      z-index: 50;
+      background: rgba(0, 30, 18, 0.75);
+      backdrop-filter: saturate(1.2) blur(6px);
+      color: #fff;
     }
-    nav a {
-      color: white;
-      text-decoration: none;
-      padding: 0.5em 1em;
-      border-radius: 6px;
-      background-color: #038c3e;
-      transition: background 0.3s;
+    .topbar-inner {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: .75rem 1rem;
     }
-    nav a:hover { background: #02692c; }
+    .brand { display:flex; align-items:center; gap:.6rem; font-weight:700; letter-spacing:.3px; }
+    .brand svg { width:28px; height:28px; }
+    .nav {
+      display: flex; flex-wrap: wrap; gap: .5rem;
+    }
+    .nav a {
+      color:#fff; text-decoration:none; padding:.5rem .75rem; border-radius:8px;
+    }
+    .nav a:hover { background: rgba(255,255,255,.12); }
 
-    .container {
+    /* ===== HERO like national parks landing ===== */
+    .hero {
+      position: relative;
+      min-height: 72vh; /* tall banner */
+      display: grid;
+      place-items: end start;
+      color: #fff;
+      overflow: hidden;
+      background: #000;
+    }
+    .hero::before {
+      content: "";
+      position: absolute; inset: 0;
+      background: url('background.jpg') center/cover no-repeat fixed;
+      transform: scale(1.02); /* subtle zoom */
+    }
+    .hero::after {
+      content: "";
+      position: absolute; inset: 0;
+      background: linear-gradient(180deg, rgba(0,0,0,.35) 0%, rgba(0,0,0,.55) 60%, rgba(0,0,0,.75) 100%);
+    }
+    .hero-content {
       position: relative; z-index: 1;
-      max-width: 900px;
-      margin: 2em auto;
-      padding: 1em;
-      background: rgba(255,255,255,0.85);
-      border-radius: 8px;
+      width: 100%;
+      max-width: 1200px; margin: 0 auto; padding: 3rem 1rem 2.5rem;
     }
-      max-width: 900px;
-      margin: 2em auto;
-      padding: 1em;
-      background: rgba(255,255,255,0.85);
-      border-radius: 8px;
+    .kicker { text-transform: uppercase; font-weight: 800; letter-spacing: .06em; opacity:.9; }
+    .hero-title { margin:.25rem 0 0; font-weight: 800; line-height: 1.1; font-size: clamp(2rem, 6vw, 3.75rem); }
+    .scroll-hint {
+      display:flex; align-items:center; gap:.5rem; margin-top:1.25rem; font-weight:600; opacity:.95;
     }
-    h2 { color: #004225; margin-top: 0; }
+    .scroll-hint .arrow { display:inline-block; width:0; height:0; border-left:6px solid transparent; border-right:6px solid transparent; border-top:8px solid #9fe29f; }
 
-    footer {
-      position: relative; z-index: 1;
-      text-align: center;
-      padding: 2em;
-      background-color: rgba(0, 66, 37, 0.9);
-      color: white;
+    /* ===== Content card ===== */
+    .container { max-width: 1000px; margin: -2rem auto 2.5rem; padding: 0 1rem; position: relative; }
+    .card {
+      background: #ffffff; border-radius: 14px; box-shadow: 0 8px 28px rgba(0,0,0,.12);
+      padding: 1.25rem 1.25rem; /* mobile */
     }
-      text-align: center;
-      padding: 2em;
-      background-color: rgba(0, 66, 37, 0.9);
-      color: white;
+    @media (min-width: 720px) { .card { padding: 2rem 2.25rem; } }
+    h2 { color: #0b4a2b; margin-top: 0; }
+
+    /* ===== Button row to other pages ===== */
+    .cta-row { display:flex; flex-wrap:wrap; gap:.6rem; margin: 1rem 0 1.25rem; }
+    .btn {
+      display:inline-block; background:#0e6b3b; color:#fff; text-decoration:none; padding:.6rem .9rem; border-radius:10px; font-weight:600;
     }
+    .btn:hover { background:#0b5a31; }
+
+    footer { background:#032f1b; color:#fff; text-align:center; padding:1.75rem 1rem; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Smokowisko National Dragon Park</h1>
-    <p>Protecting Poland's magical heritage since 1893</p>
+  <!-- Top navigation like PPN -->
+  <header class="topbar" role="banner">
+    <div class="topbar-inner">
+      <div class="brand" aria-label="Smokowisko brand">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="white" d="M12 2l3 5 6 .9-4.2 4 1 5.9L12 15l-5.8 2.8 1-5.9L3 7.9 9 7z"/></svg>
+        <span>Smokowisko National Dragon Park</span>
+      </div>
+      <nav class="nav" aria-label="Primary">
+        <a href="adoption.html">Our Adoption Program</a>
+        <a href="gallery.html">Picture Gallery</a>
+        <a href="visit.html">Plan Your Visit</a>
+        <a href="staff.html">Meet Our Staff</a>
+      </nav>
+    </div>
   </header>
 
-  <nav>
-    <a href="adoption.html">Our Adoption Program</a>
-    <a href="gallery.html">Picture Gallery</a>
-    <a href="visit.html">Plan Your Visit</a>
-    <a href="staff.html">Meet Our Staff</a>
-  </nav>
+  <!-- HERO section with large background, title overlay, and scroll hint -->
+  <section class="hero" aria-label="Hero">
+    <div class="hero-content">
+      <div class="kicker">With love for nature</div>
+      <h1 class="hero-title">Smokowisko National Dragon Park</h1>
+      <a href="#content" class="scroll-hint" aria-label="Scroll to content">
+        <span>Scroll</span>
+        <span class="arrow"></span>
+      </a>
+    </div>
+  </section>
 
-  <main class="container">
-    <article aria-label="Park history and mission">
+  <!-- Main informational card (the only info) -->
+  <main id="content" class="container">
+    <article class="card" aria-label="Park history and mission">
       <h2>The Foundation and Mission of Smokowisko National Dragon Park</h2>
+      <div class="cta-row">
+        <a class="btn" href="adoption.html">Our Adoption Program</a>
+        <a class="btn" href="gallery.html">Picture Gallery</a>
+        <a class="btn" href="visit.html">Plan Your Visit</a>
+        <a class="btn" href="staff.html">Meet Our Staff</a>
+      </div>
       <p>
         Smokowisko National Dragon Park was founded in <strong>1893</strong> by a coalition of naturalists,
         folklorists, and local guardians. Among its notable patrons were Count Janusz Radziwiłł, a respected
