--- a/adoption.html
+++ b/adoption.html
@@ -88,6 +88,13 @@
         </ul>
       </div>
 
+      <h2>Meet Our Dragons</h2>
+      <p>
+        Before choosing your future dragon companion, you might like to learn more about them.
+        Visit our <a href="dragons.html">Meet Our Dragons</a> page to see their portraits,
+        read about their personalities, and discover which one might be your perfect match.
+      </p>
+
       <h2>About the Patron Application</h2>
       <p>
         Please complete the form below. This application is for the person willing to adopt a dragon virtually.
