--- a/staff.html
+++ b/staff.html
@@ -4,129 +4,106 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meet Our Staff - Smokowisko National Dragon Park</title>
+  <meta name="description" content="Get to know the Smokowisko team and find contact details for the Park." />
   <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      margin: 0;
-      background-color: #f2f7f3;
-      color: #333;
-      line-height: 1.6;
-    }
-    header {
-      background-color: #004225;
-      color: white;
-      padding: 1.5em;
-      text-align: center;
-    }
-    nav {
-      background-color: #027333;
-      display: flex;
-      justify-content: center;
-      gap: 1em;
-      padding: 0.5em;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      padding: 0.3em 0.7em;
-      border-radius: 5px;
-    }
-    nav a:hover {
-      background-color: rgba(255,255,255,0.15);
-    }
-    .container {
-      max-width: 900px;
-      margin: 2em auto;
-      padding: 0 1em;
-    }
-    h2, h3 {
-      color: #004225;
-    }
-    .staff-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5em;
-      margin-bottom: 2em;
-    }
-    .staff-card {
-      background: white;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      text-align: center;
-      padding-bottom: 1em;
-    }
-    .staff-card img {
-      width: 100%;
-      height: auto;
-      cursor: pointer;
-      display: block;
-    }
-    .contact {
-      background-color: #e9f4ec;
-      padding: 1.5em;
-      border-radius: 10px;
-    }
-    footer {
-      text-align: center;
-      padding: 1em;
-      background-color: #004225;
-      color: white;
-    }
+    :root { color-scheme: light; }
+    * { box-sizing: border-box; }
+    body { font-family: "Segoe UI", system-ui, -apple-system, Roboto, Arial, sans-serif; margin:0; background:#f5f7f6; color:#1d1f1e; line-height:1.65; }
+
+    /* Topbar */
+    .topbar { position: sticky; top: 0; width: 100%; z-index: 50; background: rgba(0,30,18,0.85); color:#fff; }
+    .topbar-inner { max-width:1200px; margin:0 auto; display:flex; align-items:center; justify-content:space-between; padding:.75rem 1rem; }
+    .brand { display:flex; align-items:center; gap:.6rem; font-weight:700; }
+    .brand svg { width:28px; height:28px; }
+    .nav { display:flex; flex-wrap:wrap; gap:.5rem; }
+    .nav a { color:#fff; text-decoration:none; padding:.5rem .75rem; border-radius:8px; }
+    .nav a:hover { background:rgba(255,255,255,.12); }
+
+    /* Layout */
+    .container { max-width:1100px; margin:2rem auto; padding:0 1rem; }
+    .card { background:#fff; border-radius:14px; box-shadow:0 8px 28px rgba(0,0,0,.12); padding:1.25rem; margin-bottom:1.25rem; }
+    h1, h2, h3 { color:#0b4a2b; margin:0 0 .6rem; }
+
+    .staff-grid { display:grid; gap:1rem; }
+    @media (min-width: 900px){ .staff-grid { grid-template-columns: repeat(3, 1fr); } }
+
+    .staff-card { background:#fff; border:1px solid #e2ebe6; border-radius:14px; overflow:hidden; box-shadow:0 6px 20px rgba(0,0,0,.08); }
+    .photo { width:100%; aspect-ratio: 3 / 4; overflow:hidden; background:#eaf5ef; border-bottom:1px solid #dfe9e3; }
+    .photo img { width:100%; height:100%; object-fit:cover; display:block; }
+    .staff-body { padding:1rem 1rem 1.25rem; }
+    .staff-body p { margin:.4rem 0 0; color:#394e44; }
+
+    .contact { background:#e9f4ec; border:1px solid #d8e9dd; border-radius:12px; padding:1rem; }
+    a { color:#0e6b3b; }
   </style>
-  <script>
-    function openImage(src) {
-      window.open(src, '_blank');
-    }
-  </script>
 </head>
 <body>
-  <header>
-    <h1>Meet Our Staff</h1>
-    <p>The dedicated team behind Smokowisko’s conservation efforts</p>
+  <!-- Topbar -->
+  <header class="topbar" role="banner">
+    <div class="topbar-inner">
+      <div class="brand">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="white" d="M12 2l3 5 6 .9-4.2 4 1 5.9L12 15l-5.8 2.8 1-5.9L3 7.9 9 7z"/></svg>
+        <span>Smokowisko National Dragon Park</span>
+      </div>
+      <nav class="nav" aria-label="Primary">
+        <a href="index.html">Home</a>
+        <a href="adoption.html">Our Adoption Program</a>
+        <a href="dragons.html">Meet Our Dragons</a>
+        <a href="visit.html">Plan Your Visit</a>
+        <a href="gallery.html">Picture Gallery</a>
+        <a href="staff.html" aria-current="page">Meet Our Staff</a>
+      </nav>
+    </div>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="adoption.html">Adoption Program</a>
-    <a href="dragons.html">Meet Our Dragons</a>
-    <a href="visit.html">Plan Your Visit</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="meet-our-staff.html">Meet Our Staff</a>
-  </nav>
-
   <main class="container">
-    <section>
+    <section class="card">
       <h2>Our Most Notable Staff Members</h2>
       <div class="staff-grid">
-        <div class="staff-card">
-          <img src="jan-kowalski.jpg" alt="Jan Kowalski" onclick="openImage('jan-kowalski.jpg')">
-          <h3>Jan Kowalski – Head Ranger</h3>
-          <p>With over 30 years patrolling the Smokowisko Forest, Jan is the Park’s living encyclopedia. Known for his calm approach even when spotting a Draconis sylvanus up close, he is responsible for ranger training and safety protocols.</p>
-        </div>
-        <div class="staff-card">
-          <img src="magdalena-wisniewska.jpg" alt="Magdalena Wiśniewska" onclick="openImage('magdalena-wisniewska.jpg')">
-          <h3>Magdalena Wiśniewska – Senior Dragon Biologist</h3>
-          <p>Magdalena leads the Park’s dragon behavior research unit. She specializes in scale iridescence studies and migratory path mapping, and has authored several field manuals for dragon observation.</p>
-        </div>
-        <div class="staff-card">
-          <img src="piotr-nowak.jpg" alt="Piotr Nowak" onclick="openImage('piotr-nowak.jpg')">
-          <h3>Piotr Nowak – Cultural Liaison</h3>
-          <p>Tasked with preserving the local folklore that surrounds dragons, Piotr bridges modern conservation with centuries-old traditions. He organizes seasonal festivals and educational programs for visitors.</p>
-        </div>
+        <!-- Jan -->
+        <article class="staff-card">
+          <a class="photo" href="jan-kowalski.jpg" target="_blank" rel="noopener">
+            <img src="jan-kowalski.jpg" alt="Jan Kowalski, Head Ranger" loading="lazy" decoding="async">
+          </a>
+          <div class="staff-body">
+            <h3>Jan Kowalski – Head Ranger</h3>
+            <p>With over 30 years patrolling the Smokowisko Forest, Jan is the Park’s living encyclopedia. Known for his calm approach even when spotting a <em>Draconis sylvanus</em> up close, he is responsible for ranger training and safety protocols.</p>
+          </div>
+        </article>
+
+        <!-- Magdalena -->
+        <article class="staff-card">
+          <a class="photo" href="magdalena-wisniewska.jpg" target="_blank" rel="noopener">
+            <img src="magdalena-wisniewska.jpg" alt="Magdalena Wiśniewska, Senior Dragon Biologist" loading="lazy" decoding="async">
+          </a>
+          <div class="staff-body">
+            <h3>Magdalena Wiśniewska – Senior Dragon Biologist</h3>
+            <p>Magdalena leads the Park’s dragon behavior research unit. She specializes in scale iridescence studies and migratory path mapping, and has authored several field manuals for careful, ethical observation.</p>
+          </div>
+        </article>
+
+        <!-- Piotr -->
+        <article class="staff-card">
+          <a class="photo" href="piotr-nowak.jpg" target="_blank" rel="noopener">
+            <img src="piotr-nowak.jpg" alt="Piotr Nowak, Cultural Liaison" loading="lazy" decoding="async">
+          </a>
+          <div class="staff-body">
+            <h3>Piotr Nowak – Cultural Liaison</h3>
+            <p>Piotr preserves the folklore that surrounds dragons and bridges modern conservation with centuries-old traditions. He coordinates seasonal festivals and education programs for visitors.</p>
+          </div>
+        </article>
       </div>
     </section>
 
-    <section class="contact">
-      <h2>Contact the Park Administration</h2>
-      <p>Email: <a href="mailto:smokowisko.park@gmail.com">smokowisko.park@gmail.com</a></p>
-      <p>Address: Smokowisko National Dragon Park Administration, Smokowisko Forest Reserve, Southern Poland</p>
-      <p>Office Hours: Monday – Friday, 9:00 – 17:00 (local time)</p>
-      <p>For urgent ranger assistance during your visit, please contact the Visitor Center.</p>
+    <section class="card contact" aria-label="Contact">
+      <h2>Contact & Admin</h2>
+      <p><strong>Email:</strong> <a href="mailto:smokowisko.park@gmail.com">smokowisko.park@gmail.com</a></p>
+      <p><strong>Address:</strong> Smokowisko National Dragon Park Administration, Forest Meadow Visitor Center, Smokowisko Forest Reserve, Southern Poland</p>
+      <p><strong>Office Hours:</strong> Monday – Friday, 09:00–17:00 (local time). For urgent assistance during your visit, please contact the Visitor Center desk or a ranger on duty.</p>
     </section>
   </main>
 
-  <footer>
+  <footer class="card" style="background:#032f1b; color:#fff; text-align:center;">
     <p>&copy; 2025 Smokowisko National Dragon Park. All rights reserved.</p>
   </footer>
 </body>
